se coloca saludos

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <hi>Hola Koders</hi>
     <p>Aprendiendo GitHub</p>
     <p>ISRAEL MORALES</p>
+
+    <h2>Se manda saludos</h2>
 </body>
 </html>
